# trading-journal

./: .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  agency.toml  docker-compose.backend.yml  docker-compose.yml  test-secret-leak.txt
apps/backend/: .env.example  .flex_backfill_failures.json  .gitignore  Dockerfile  README-supabase-auth.md  README.md  alembic.ini  main.py  pyproject.toml  worker_main.py
apps/backend/alembic/: env.py
apps/backend/alembic/versions/: 0bf5a6151a3f_add_tradingaccountconfig.py  335418ec68e3_add_trades_table.py  3d7ac526bd6a_change_conid_to_bigint_in_backtest_.py  4d9a58ecd93b_migrate_monetary_fields_to_decimal.py  5fe76bf46802_add_schwab_support_to_trading_models.py  6093b5cc0229_add_finance_snapshots_table.py  710cafd9a8c6_add_dividend_positions_table_retry.py  8250ff809a39_add_execution_table.py  84ee53f97357_add_dividend_accounts_table.py  93b8104cc90e_add_linked_id_to_dividend_accounts.py  a1b2c3d4e5f6_add_yahoo_worker_schema.py  aaf944172360_add_persistent_trading_models.py  acadd4bc6806_add_insurance_policies_table.py  acfa0cdeaae7_add_users_table.py  b2d42d55f559_add_daily_summary_table.py  b75e2a944c8b_add_plans_table.py  b8f9cb81d6e3_add_backtest_tables.py  bccb9af01233_add_daily_bar_table.py  c1c2c3c4c5c6_add_credit_card_expense_pipeline.py  c1d2e3f4a5b6_fix_tase_yahoo_map.py  c8ce438e9699_use_bigint_for_trade_ids.py  cb9ab42f6156_add_dividend_cache.py  (+6 more)
apps/backend/app/: dependencies.py  supabase_auth.py
apps/backend/app/api/: day.py  (+21 more)
apps/backend/docs/: compute-worker-framework.md  household-audit-trail.md  household-invites.md  ibkr-flex-options-mapping.md
apps/backend/scripts/: backfill_flex_v2.py  backfill_options.py  check_data.py  debug_500.py  debug_finances.py  debug_plan_v2.py  flex_probe.py  flex_report.py  flex_synthetic.py  inspect_db.py  migrate_rsu_usd.py  recategorize_credit_card_txns.py  reclassify_options.py  reclassify_options_chunked.py  run_backtest_sync.py  run_backtest_synthetic.py  sample_manual_positions.csv  seed_manual_account_positions.py  test_snapshot_update.py
apps/backend/tests/: conftest.py  test_analysis.py  test_analyze_batch.py  test_auth.py  test_backfill_flex_v2.py  test_backfill_options.py  test_backtest_job_handler.py  test_bond_cashflows.py  test_bond_interest_yearly.py  test_bond_ladder_holdings.py  test_bond_scanner_worker.py  test_currency.py  test_daily_summary.py  test_database_url_validation.py  test_debug_2035.py  test_debug_surplus.py  test_dividend_projection.py  test_dividend_service_enrich.py  test_dividends.py  test_flex_bond_parser.py  test_flex_refresh.py  test_flex_send_request.py  test_flex_synthetic.py  test_household_isolation.py  test_manual_crud.py  test_milestone_resolution.py  test_ndx_daily_sync.py  test_options_analytics_edge_cases.py  test_options_projection.py  test_pension_api.py  test_pension_pdf_worker.py  test_performance.py  test_plan_withdrawal.py  test_pnl_daily_handler.py  test_price_cache_worker.py  test_rsu_plan_hydration.py  test_savings_goal.py  test_security_headers.py  test_simulation.py  test_spouse_pension.py  (+12 more)
(+1092 files in other folders)
