[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name", email = "you@example.com"},
]
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "sqlalchemy",
    "psycopg2-binary",
    "python-dotenv",
    "alembic",
    "yfinance",
    "sqlmodel",
    "ib_async",
    "openpyxl>=3.1.5",
    "scipy>=1.15.3",
    "numpy>=2.2.6",
    "python-dateutil",
    "opentelemetry-distro",
    "opentelemetry-exporter-otlp",
    "opentelemetry-instrumentation-fastapi",
    "opentelemetry-instrumentation-sqlalchemy",
    "opentelemetry-instrumentation-logging",
    "schwab-py",
    "github-copilot-sdk>=0.1.25",
    "pdfplumber>=0.11.9",
    "pypdf>=6.10.2",
    "python-multipart>=0.0.27",
    "cachetools>=7.1.1",
    "python-jose[cryptography]>=3.5.0",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt<5.1",
    "pydantic-settings>=2.14.0",
    "pydantic[email]>=2.13.4",
    "apscheduler>=3.11.2",
]
requires-python = ">=3.10"

[tool.setuptools.packages.find]
include = ["app*"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.uv]
dev-dependencies = [
    "typing_extensions",
    "mako",
    "pytest>=9.0.2",
    "httpx>=0.28.1",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.10",
    "mypy>=1.20.0",
    "pytest-cov>=7.1.0",
    "respx>=0.21.0",
]
[tool.ruff]
line-length = 120

[tool.ruff.lint]
# Ignore pre-existing issues that are safe to suppress
ignore = [
    "E701",   # Multiple statements on one line (colon) — common in type stubs
    "E702",   # Multiple statements on one line (semicolon)
    "E722",   # Do not use bare 'except' — pre-existing patterns
    "E741",   # Ambiguous variable name
    "F821",   # Undefined name — forward references in type annotations
    "F823",   # Local variable referenced before assignment
]

[tool.ruff.lint.per-file-ignores]
"alembic/*" = ["E402"]     # Module-level imports not at top — alembic convention
"scripts/*" = ["E402"]     # Scripts with sys.path manipulation
"tests/*" = ["F841"]       # Unused variables in tests — common for fixtures

[tool.pytest.ini_options]
asyncio_mode = "auto"
